samples/_failures_safe/1761001864_1ccd6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e43f4b5.c: In function ‘main’:
./samples/SAFE/__tmp_5e43f4b5.c:165:5: error: expected expression at end of input
  165 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_5e43f4b5.c:165:5: error: expected declaration or statement at end of input
